# pdf2md

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  packaging_entry.py  pyproject.toml
scripts/: build_exe.ps1
src/pdf2md/: __main__.py  convert_runner.py  discover.py  java_check.py  merge.py  runner.py
src/pdf2md/ui/: __init__.py  app.py  fonts.py
