[project]
name = "pdf2md"
version = "0.1.0"
description = "Batch PDF to Markdown (opendataloader-pdf) with CustomTkinter GUI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "opendataloader-pdf>=2.0",
    "customtkinter>=5.2",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.scripts]
pdf2md = "pdf2md.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2md"]
